fix: Prevent top app bar from overflowing

--- a/src/components/material/TopAppBar.scss
+++ b/src/components/material/TopAppBar.scss
@@ -3,6 +3,10 @@
 @import '@material/react-button/index.scss';
 @import '@material/ripple/mixins.scss';
 
+.mdc-top-app-bar {
+  max-width: 100vw;
+}
+
 .mdc-button.site-title {
   @include mdc-button-filled-accessible(transparent);
 }
